@@ -1,15 +1,15 @@
 package com.stockManagementSystem.sms.service;
 
 import com.stockManagementSystem.sms.Entity.Product;
-import com.stockManagementSystem.sms.Model.ProductRequest;
-import com.stockManagementSystem.sms.Model.ProductResponse;
+import com.stockManagementSystem.sms.Model.ProductModel;
 import com.stockManagementSystem.sms.Repository.ProductRepository;
-import lombok.RequiredArgsConstructor;
+import jakarta.persistence.Id;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -17,33 +17,53 @@ public class ProductService {
     @Autowired
 
     ProductRepository productRepository;
-    public void createProduct(ProductRequest productRequest)
+    public ProductModel createProduct(ProductModel product)
     {
-     Product product=Product.builder()
-             .Id(productRequest.getId())
-             .productDesc(productRequest.getProductDesc())
-             .productTitle(productRequest.getProductTitle())
-             .price(productRequest.getPrice())
-             .build();
+     return product.assamble(productRepository.save(product.dissamble()));
 
-
-        productRepository.save(product);
     }
 
-    public List<ProductResponse> getAllProducts() {
-        List <Product> products = (List<Product>) productRepository.findAll();
-
-        return products.stream().map(this::mapToProductResponse).toList();
+    public List<ProductModel> getAllProduct()
+    {
+        return productRepository.findAll().stream().map(ProductModel::new).collect(Collectors.toList());
     }
 
-    private ProductResponse mapToProductResponse(Product product) {
-        return  ProductResponse.builder()
-                .Id(product.getId())
-                .productTitle(product.getProductTitle())
-                .producType(product.getProducType())
-                .productDesc(product.getProductDesc())
-                .price(product.getPrice())
-                .build();
+    public List<ProductModel> findProduct(Long Id, String productTitle)
+    {
+        List<ProductModel> ProductModels = new ArrayList<>();
+        if(Id != null)
+        {
+            ProductModels = List.of(productRepository.findAll()
+                    .stream()
+                    .map(ProductModel::new)
+                    .filter(productModel -> productModel.getId()==Id)
+                    .findFirst()
+                    .get());
+
+        }
+        else if(productTitle != null)
+        {
+            ProductModels = List.of(productRepository.findAll()
+                    .stream()
+                    .map(ProductModel::new)
+                    .filter(ProductModel -> ProductModel.getProductTitle().equalsIgnoreCase(productTitle))
+                    .findFirst()
+                    .get());
+
+        }
+        else
+        {
+            ProductModels = productRepository.findAll()
+                    .stream()
+                    .map(ProductModel::new)
+                    .collect(Collectors.toList());
+        }
+        return ProductModels;
     }
 
+
+    public String deleteProduct(long Id) {
+        productRepository.deleteById(Id);
+        return "product deleted successfully";
+    }
 }
